--- a/course-be-main/course-be-main/package.json
+++ b/course-be-main/course-be-main/package.json
@@ -15,11 +15,15 @@
         "connect-mongo": "^5.0.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "csv-parser": "^3.0.0",
+        "csvtojson": "^2.0.10",
         "dotenv": "^16.3.1",
+        "exceljs": "^4.4.0",
         "express": "^4.18.2",
         "express-fileupload": "^1.4.1",
         "express-session": "^1.17.3",
         "fs-extra": "^11.1.1",
+        "js-xlsx": "^0.8.22",
         "jsonwebtoken": "^9.0.2",
         "jwt-decode": "^3.1.2",
         "mongoose": "^7.5.0",
@@ -27,7 +31,8 @@
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.5",
         "nodemon": "^3.0.1",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "xlsx": "^0.18.5"
     },
     "engines": {
         "node": ">=14.20.1"
